@@ -1,5 +1,6 @@
 Changelog for Collections.
 
+- Fix Selections when sorting by menuindex
 - Hotfix for endless loading in Safari
 
 Collections 3.4.0
